--- a/css/styles.css
+++ b/css/styles.css
@@ -3,15 +3,50 @@
   width: 100%;
   clear: both;
   box-sizing: border-box;
-  max-width: 1840px;
   margin: 0 auto;
 }
 
 .block {
   float: left;
+  width: 100%;
 }
 
 img {
   float: left;
   display: block;
+  width: 100%;
+}
+
+#slide-2,
+#slide-3,
+#slide-4 {
+  display: none;
+}
+
+@media (min-width: 480px) {
+  .block {
+    width: 50%;
+  }
+
+  #slide-2,
+  #slide-3,
+  #slide-4 {
+    display: block;
+  }
+}
+
+@media (min-width: 768px) {
+  .block {
+    width: 25%;
+  }
+}
+
+@media (min-width: 992px) {
+  
+}
+
+@media (min-width: 1200px) {
+  .container {
+    max-width: 1840px;
+  }
 }
